# DegreePlanner

./: .eslintrc.json  .gitignore  .travis.yml  index.html  package.json
scraper/: .gitignore  Cargo.toml  scaper.toml
scraper/src/: course_entry.rs  main.rs  term_entry.rs
server/: .env.template  .gitignore  Cargo.toml  README.md  Rocket.toml
server/migrations/2018-09-13-141301_users/: up.sql
server/migrations/2018-09-15-183245_create_courseplan/: down.sql  up.sql
server/migrations/2018-09-15-210013_create_terms/: up.sql
server/migrations/2018-09-16-205020_create_terms_courses/: down.sql  up.sql
server/migrations/2018-09-17-174351_google_id/: down.sql  up.sql
server/migrations/2018-09-17-175510_unique_email/: down.sql  up.sql
server/src/: graphql.rs  main.rs  schema.rs  template.rs
server/src/api/: auth.rs  db.rs  graphiql.html  graphql.rs  mod.rs
server/src/models/: course_plans.rs  mod.rs  term_courses.rs  terms.rs  users.rs
server/templates/: uw-software-engineering_2018-2019_stream-8.json
src/: actions.js  api.js  index.js  reducers.js
src/components/: AddCourse.js  AddTerm.js  Header.js  Home.js  Login.js  Logout.js  NotFound.js  RemoveCourse.js  RemoveTerm.js  Setup.js  Term.js  Timeline.js
src/containers/: App.js
